--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ blockquote {
 body {
   min-height: 100vh;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 h1,
@@ -70,6 +71,11 @@ body {
   font-size: 0.9rem;
   font-weight: 800;
   letter-spacing: 0.25rem;
+}
+
+.hero-image {
+  width: calc(100% + 50px);
+  transform: translateX(-25px)
 }
 
 h1 {
