--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ body {
   max-width: 400px;
   margin: auto;
   margin-top: 2rem;
+  padding: 0 0.7rem;
 }
 
 .hero-para,
@@ -62,6 +63,12 @@ body {
   margin-top: 1rem;
   margin-bottom: 1rem;
   margin: auto;
+}
+
+.main-para, .footer-para {
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0 2rem;
 }
 
 .topper-text {
@@ -79,18 +86,19 @@ body {
 }
 
 h1 {
-  font-size: 3.6rem;
+  font-size: 3.1rem;
   font-weight: 800;
   color: #28283d;
   margin-top: 1rem;
   margin-bottom: 2rem;
+  padding: 0 0.8rem;
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   font-weight: 800;
   color: #28283d;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   margin-bottom: 2rem;
 }
 
@@ -144,7 +152,7 @@ button {
   margin-top: 4rem;
 }
 
-.section-divider {
+.section-divider1 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -160,6 +168,7 @@ button {
 .number-divider-circle {
   width: 50px;
   height: 50px;
+  background-color: white;
   margin: auto;
   padding: 1rem;
   border: 0.5px solid hsl(240, 10%, 57%);
@@ -178,30 +187,59 @@ button {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-  width: fit-content;
+  width: 100%;
+  max-width: 400px;
   justify-content: center;
   align-items: center;
 }
 
 .grid-image {
   border-radius: 10px;
+  flex: 0 1 calc(50% - 0.5rem);
+  max-width: calc(50% - 0.5rem);
+  height: auto;
+  display: block;
 }
 
 .main-para {
-  font-size: 1.1rem;
-  font-weight: 500;
   color: #87879d;
   margin-bottom: 4rem;
 }
 
+.main-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-cta {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer-container {
   background-image: url(./assets/mobile/image-footer.jpg);
-  background-color: #4d96a9;
-  background-blend-mode: overlay;
   background-size: cover;
-  background-repeat: no-repeat;
-  padding: 2rem;
+  background-repeat: no-repeat; 
 }
+
+.color-layer {
+  background-color: rgba(77, 150, 169, 0.9);
+  padding: 3.5rem 0;
+}
+
+.section-divider2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  margin-bottom: -25px;
+  z-index: 1;
+}
+
 
 .footer-heading {
   margin-top: 1rem;
@@ -209,8 +247,6 @@ button {
 }
 
 .footer-para {
-  font-size: 1.1rem;
-  font-weight: 500;
   color: white;
   margin-bottom: 4rem;
 }
