further work on tablet and desktop layouts

--- a/styles.css
+++ b/styles.css
@@ -49,12 +49,22 @@ body {
   padding-bottom: 2rem;
 }
 
+/* ===== MOBILE LAYOUT ===== */
+
+.hero-image-desktop-left {
+  display: none;
+}
+
+.hero-image-desktop-right {
+  display: none;
+}
+
 .hero-text-buttons,
 .main-content {
   max-width: 400px;
   margin: auto;
   margin-top: 2rem;
-  padding: 0 0.7rem;
+  padding: 0 1.5rem;
 }
 
 .hero-para,
@@ -86,12 +96,12 @@ body {
 }
 
 h1 {
-  font-size: 3.1rem;
+  font-size: 2.9rem;
   font-weight: 800;
   color: #28283d;
   margin-top: 1rem;
   margin-bottom: 2rem;
-  padding: 0 0.8rem;
+  padding: 0 1rem;
 }
 
 h2 {
@@ -103,7 +113,7 @@ h2 {
 }
 
 .hero-para {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 500;
   color: #87879d;
   margin-bottom: 1.5rem;
@@ -221,8 +231,10 @@ button {
 }
 
 .footer-container {
+  width: 100%;
   background-image: url(./assets/mobile/image-footer.jpg);
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat; 
 }
 
@@ -240,6 +252,14 @@ button {
   z-index: 1;
 }
 
+.footer-inner {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 0 0.7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .footer-heading {
   margin-top: 1rem;
@@ -248,7 +268,7 @@ button {
 
 .footer-para {
   color: white;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 
 .dl-button-footer {
@@ -264,4 +284,142 @@ button {
 .version-footer {
   color: #D9B8FF;
 }
+
+/* ===== TABLET LAYOUT ===== */
+
+@media (min-width: 750px) {
+
+  .hero-text-buttons {
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hero-text {
+    max-width: 75%;
+    margin: auto;
+  }
+
+  .buttons {
+  display: flex;
+  flex-direction: row;
+  max-width: 60%;
+  margin: auto;
+  gap: 1rem;
+  margin-bottom: 3.5rem;
+}
+
+h1 {
+  font-size: 3.3rem;
+}
+
+.hero-para {
+  font-size: 1.3rem;
+}
+
+.main-content {
+  max-width: 800px;
+  margin: auto;
+  margin-top: 2rem;
+  padding: 0 2.5rem;
+}
+
+.image-grid {
+  margin: 3.5rem auto;
+  display: flex;
+  max-width: 800px;
+  gap: 1rem;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.grid-image {
+  border-radius: 10px;
+  flex: 0 1 calc(25% - 0.75rem);
+  max-width: calc(25% - 0.75rem);
+  height: auto;
+  display: block;
+}
+
+.main-text-container {
+  max-width: 600px;
+  margin: auto;
+}
+
+.footer-container {
+  width: 100%;
+  background-image: url(./assets/tablet/image-footer.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; 
+}
+
+}
+
+/* ===== DESKTOP LAYOUT ===== */
+
+@media (min-width: 1024px) {
+
+  .hero-image {
+    display: none;
+  }
+
+  .hero-image-desktop-left, .hero-image-desktop-right {
+    display: block;
+  }
+
+  .hero-text-buttons {
+    max-width: 1700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .text-buttons {
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-content {
+  max-width: 1300px;
+  margin: auto;
+  margin-top: 2rem;
+  padding: 0 2.5rem;
+}
+
+  .image-grid {
+  margin: 3.5rem auto;
+  display: flex;
+  max-width: 1100px;
+  gap: 1rem;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.grid-image {
+  border-radius: 10px;
+  flex: 0 1 calc(30% - 0.3rem);
+  max-width: 250px;
+  height: auto;
+  display: block;
+}
+
+.footer-container {
+  width: 100%;
+  background-image: url(./assets/desktop/image-footer.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; 
+}
+
+}
+
 
